Tidied up test output